--- a/index.html
+++ b/index.html
@@ -12,30 +12,53 @@
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
+  <div id="app">
+    <img src="images/logo.svg" alt="logo">
+    
+    <div class="contenedor">
+      <div class="bloque1">
+        <div class="sectionBill">
+          <label for="bill">Bill</label>
+          <span><img src="images/icon-dollar.svg" alt="icon-dollar"></span>
+          <input type="text" id="bill" placeholder="0">
+        </div>
 
-  Bill
+        <div class="seccionPorcentaje">
+          <label>Select Tip %</label>
+          <div><input type="radio" name="porcentaje" id="5"><label for="5">5%</label></div>
+          <div><input type="radio" name="porcentaje" id="10"><label for="10">10%</label></div>
+          <div><input type="radio" name="porcentaje" id="15"><label for="15">15%</label></div>
+          <div><input type="radio" name="porcentaje" id="25"><label for="25">25%</label></div>
+          <div><input type="radio" name="porcentaje" id="50"><label for="50">50%</label></div>
+          <div><input type="text" placeholder="Custom"></div>
+        </div>
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+        <div class="sectionPersonas">
+          <label for="numPersonas">Number of People</label>
+          <span><img src="images/icon-person.svg" alt="icon-person"></span>
+          <input type="text" id="numPersonas" placeholder="0">
+        </div>
+      </div>
 
-  Number of People
+      <div class="bloque2">
+        <div class="subBloque1">
+          <label>Tip Amount<br>/ person</label>
+          <input type="text" placeholder="0">
+        </div>
 
-  Tip Amount
-  / person
+        <div class="subBloque2">
+          <label>Total<br>/ person</label>
+          <input type="text" placeholder="0">
+        </div>
 
-  Total
-  / person
-
-  Reset
+        <button>Reset</button>
+      </div>
+    </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/jyokarianlia/tipCalculatorApp.git">jyokarianlia</a>.
   </div>
 </body>
 </html>
