--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
         <div class="seccionPorcentaje">
           <label>Select Tip %</label>
-          <div><input type="radio" name="porcentaje" id="5" class="input"><label for="5">5%</label></div>
-          <div><input type="radio" name="porcentaje" id="10" class="input"><label for="10">10%</label></div>
-          <div><input type="radio" name="porcentaje" id="15" class="input"><label for="15">15%</label></div>
-          <div><input type="radio" name="porcentaje" id="25" class="input"><label for="25">25%</label></div>
-          <div><input type="radio" name="porcentaje" id="50" class="input"><label for="50">50%</label></div>
-          <div class="custom"><input type="text" class="txtCustom" placeholder="Custom"></div>
+          <div :class="p5"><input type="radio" name="porcentaje" id="5" class="input"><label for="5">5%</label></div>
+          <div :class="p10"><input type="radio" name="porcentaje" id="10" class="input"><label for="10">10%</label></div>
+          <div :class="p15"><input type="radio" name="porcentaje" id="15" class="input"><label for="15">15%</label></div>
+          <div :class="p25"><input type="radio" name="porcentaje" id="25" class="input"><label for="25">25%</label></div>
+          <div :class="p50"><input type="radio" name="porcentaje" id="50" class="input"><label for="50">50%</label></div>
+          <div class="custom" :class="pcustom"><input type="text" class="txtCustom" placeholder="Custom"></div>
         </div>
 
         <div class="sectionPersonas">
@@ -42,14 +42,14 @@
       </div>
 
       <div class="bloque2">
-        <div class="subBloque1">
-          <label>Tip Amount<br>/ person</label>
-          <input type="text" placeholder="0">
+        <div class="subBloque">
+          <label><span>Tip Amount</span><br>/ person</label>
+          <label class="span">$0.00</label>
         </div>
 
-        <div class="subBloque2">
-          <label>Total<br>/ person</label>
-          <input type="text" placeholder="0">
+        <div class="subBloque pos2">
+          <label><span>Total</span><br>/ person</label>
+          <label class="span">$0.00</label>
         </div>
 
         <button>Reset</button>
