--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
       <div class="bloque1">
         <div class="sectionBill">
           <label for="bill">Bill</label>
-          <input type="number" id="bill" placeholder="0">
+          <input type="number" id="bill" placeholder="0" v-model="bill">
           <span><img src="images/icon-dollar.svg" alt="icon-dollar"></span>
         </div>
 
         <div class="seccionPorcentaje">
           <label>Select Tip %</label>
-          <div :class="p5"><input type="radio" name="porcentaje" id="5" class="input"><label for="5">5%</label></div>
-          <div :class="p10"><input type="radio" name="porcentaje" id="10" class="input"><label for="10">10%</label></div>
-          <div :class="p15"><input type="radio" name="porcentaje" id="15" class="input"><label for="15">15%</label></div>
-          <div :class="p25"><input type="radio" name="porcentaje" id="25" class="input"><label for="25">25%</label></div>
-          <div :class="p50"><input type="radio" name="porcentaje" id="50" class="input"><label for="50">50%</label></div>
-          <div class="custom" :class="pcustom"><input type="number" class="txtCustom" placeholder="Custom"></div>
+          <div :class="{selected : radio == 'p5'}"><input type="radio" id="5" name="porcentaje" class="input" value="p5" v-model="radio"><label for="5">5%</label></div>
+          <div :class="{selected : radio == 'p10'}"><input type="radio" id="10" name="porcentaje" class="input" value="p10" v-model="radio"><label for="10">10%</label></div>
+          <div :class="{selected : radio == 'p15'}"><input type="radio" id="15" name="porcentaje" class="input" value="p15" v-model="radio"><label for="15">15%</label></div>
+          <div :class="{selected : radio == 'p25'}"><input type="radio" id="25" name="porcentaje" class="input" value="p25" v-model="radio"><label for="25">25%</label></div>
+          <div :class="{selected : radio == 'p50'}"><input type="radio" id="50" name="porcentaje" class="input" value="p50" v-model="radio"><label for="50">50%</label></div>
+          <div class="custom"><input type="number" class="txtCustom" placeholder="Custom" v-model="pcustom"></div>
         </div>
 
         <div class="sectionPersonas">
@@ -61,5 +61,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/jyokarianlia/tipCalculatorApp.git">jyokarianlia</a>.
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
