Disenio desktop terminado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
   <div id="app">
-    <img class="imgLogo" src="images/logo.svg" alt="logo">
+    <div>
+      <img class="imgLogo" src="images/logo.svg" alt="logo">
+    </div>
     
     <div class="contenedor">
       <div class="bloque1">
@@ -35,9 +37,10 @@
         </div>
 
         <div class="sectionPersonas">
-          <label for="numPersonas">Number of People</label>
-          <input type="number" id="numPersonas" placeholder="0" v-model="numPerson">
           <span><img src="images/icon-person.svg" alt="icon-person"></span>
+          <label for="numPersonas">Number of People</label>
+          <label class="nozero" :class="{}">Can't be zero</label>
+          <input type="number" id="numPersonas" placeholder="0" v-model="numPerson">
         </div>
       </div>
 
