--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -39,7 +39,7 @@
         <div class="sectionPersonas">
           <span><img src="images/icon-person.svg" alt="icon-person"></span>
           <label for="numPersonas">Number of People</label>
-          <label class="nozero" :class="{}">Can't be zero</label>
+          <label class="nozero" :class="{dinblock : dinbloc}">Can't be zero</label>
           <input type="number" id="numPersonas" placeholder="0" v-model="numPerson">
         </div>
       </div>
@@ -55,7 +55,7 @@
           <label class="span"> ${{ computedTotPerson }} </label>
         </div>
 
-        <button @click="reset">Reset</button>
+        <button @click="reset" :class='{isDisabled : disable}' :disabled="disable">Reset</button>
       </div>
     </div>
   </div>
